--- a/fsm-js/FSM/tests/test.html
+++ b/fsm-js/FSM/tests/test.html
@@ -17,19 +17,18 @@
             var sources = [
                 'src/namespace.js',
 
-                'src/threading/runnable.js',
-                'src/threading/thread.js',
-                'src/threading/ticker.js',
-                'src/threading/metronome.js',
-
+                'src/skywalker/runnable.js',
                 'src/skywalker/handler.js',
                 'src/skywalker/processor.js',
                 'src/skywalker/runner.js',
 
+                'src/threading/thread.js',
+                'src/threading/ticker.js',
+                'src/threading/metronome.js',
+
                 'src/fsm/transition.js',
                 'src/fsm/state.js',
                 'src/fsm/machine.js',
-                'src/fsm/delegate.js',
                 'src/fsm/base.js',
                 'src/fsm/auto.js',
                 null
